<resources>
    <string name="app_name">DawgDebauchery</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyAfSxrWhyB2RUqgw7UANHTF8RWihpnss9g</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_verification">Verify Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_register_text">No Account? Register</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="title_activity_host_tinder">HostTinderActivity</string>
    <string name="title_activity_party_description">PartyDescriptionActivity</string>
    <string name="title_activity_host_party">HostPartyActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_guests">ViewGuestsActivity</string>

    <string name="privacy_prompt">Pick your party\'s privacy.</string>
    <string name="profile_close_btn_txt">Close</string>
    <string name="bio_default">My mom says I\'m cool! Like me please!</string>
    <string name="bio_label">Edit bio:</string>

    <string-array name="public_private">
        <item>Public</item>
        <item>Private</item>
    </string-array>

    <string name="title_activity_edit_event">EditEventActivity</string>
    <string name="title_activity_view_event_list">ViewEventListActivity</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="my_events_label">Your saved events:</string>
</resources>
