<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.uw.cruan.dawgdebauchery.EditProfile">


    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/profile_picture"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:scaleType="fitEnd"
        android:src="@drawable/profile_default"
        android:maxHeight="320dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/choose_profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/profile_picture"
        app:layout_constraintTop_toBottomOf="@id/profile_picture"
        app:layout_constraintEnd_toEndOf="@id/profile_picture"
        app:layout_constraintBottom_toBottomOf="@id/profile_picture"
        android:src="@drawable/ic_edit_profile_pic"
        />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:paddingTop="24dp"
        android:text="First Name:"
        app:layout_constraintStart_toStartOf="@id/bio_label"
        app:layout_constraintTop_toBottomOf="@id/profile_picture"
        tools:labelFor="@id/bio_container"
        />

    <EditText
        android:id="@+id/name_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:hint="Danny"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/bio_label"
        app:layout_constraintTop_toBottomOf="@+id/name_label"
        tools:layout_editor_absoluteX="12dp"/>

    <TextView
        android:id="@+id/last_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginStart="136dp"
        android:paddingTop="24dp"
        android:text="Last Name:"
        app:layout_constraintEnd_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toBottomOf="@id/profile_picture"
        tools:labelFor="@id/bio_container"/>

    <EditText
        android:id="@+id/last_name_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:hint="Sexbang"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/last_name_label"
        app:layout_constraintTop_toBottomOf="@+id/name_label"
        />

    <TextView
        android:id="@+id/bio_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/bio_label"
        app:layout_constraintTop_toBottomOf="@+id/name_container"
        tools:labelFor="@id/bio_container"
        />

    <EditText
        android:id="@+id/bio_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="@string/bio_default"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/bio_label"
        />



    <Button
        android:id="@+id/profile_close_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/profile_close_btn_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout
        android:id="@+id/my_events_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/bio_container"/>

</android.support.constraint.ConstraintLayout>
